--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
 
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="./img/fondo.jpg">
   </head>
   <body>
     <header class="container-fluid bg-dark position-sticky top-0">
